tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetNamespaces_Exception.bsl

EVIL_PROVIDER_GetNamespaces_Exception.fsx(2,1,2,56): parse error FS3033: The type provider 'Provider.EvilProviderWhereGetNamespacesRaisesException' reported an error: deliberate error for testing purposes

EVIL_PROVIDER_GetNamespaces_Exception.fsx(2,1,2,56): parse error FS3020: One or more errors seen during provided type setup
