tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetNamespaces_Exception.fsx

#r "provider_EVIL_PROVIDER_GetNamespaces_Exception.dll"

let x = 1
